test/types/cptr/const/c_ptrToSparse.good
c_ptrToSparse.chpl:8: error: Only single-locale rectangular arrays support c_ptrToConst() at present
